Fix formatting issue with jump buttons at top of garden show page

--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -75,9 +75,14 @@ a.indented {
 
 p.garden-sub-menu-item {
   display:inline-block;
-  margin: 0rem 2rem;
+  margin: 0.5rem 2rem;
 }
 
 .button.wide-spacing {
   margin: 0rem 2rem;
+}
+
+.ui.menu.garden-show-menu {
+  border: none;
+  box-shadow: none;
 }
